asm_tests/other_testfiles/invalid_files/error41.s
.name "MORO"
.comment "MORJESTA!"

kissa:
sub r1, r2, %:kissa
